--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,23 @@ services:
     networks:
       - jarvisx-network
 
+  personality:
+    build: ./services/personality
+    ports:
+      - "8007:8007"
+    environment:
+      - NODE_ENV=development
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - GOOGLE_TTS_API_KEY=${GOOGLE_TTS_API_KEY}
+      - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
+    volumes:
+      - ./services/personality:/app
+      - ./data:/app/data
+    depends_on:
+      - orchestrator
+    networks:
+      - jarvisx-network
+
 networks:
   jarvisx-network:
     driver: bridge
