🧠 Add Complete Self-Training Engine
✨ Self-Training Capabilities Added:
- Complete autonomous learning and self-improvement system
- Neural network-based training with TensorFlow.js
- Advanced pattern recognition and discovery
- Continuous feedback loop for improvement
- Self-directed experimentation and A/B testing
- Performance optimization using multiple algorithms
- Knowledge synthesis and extraction system

🧠 Core Components:
- SelfTrainingCore: Neural network training and learning management
- PatternRecognitionEngine: 6 types of autonomous pattern discovery
- FeedbackLoopSystem: Continuous improvement through feedback analysis
- AutonomousExperimenter: Self-directed A/B testing and experimentation
- PerformanceOptimizer: Multi-objective optimization with 4 algorithms
- KnowledgeSynthesizer: 7 types of knowledge extraction and synthesis

🎯 Autonomous Learning Features:
- Learns from every interaction automatically
- Discovers patterns in user behavior and preferences
- Optimizes performance parameters continuously
- Runs experiments to test improvements
- Synthesizes knowledge from all data sources
- Adapts personality traits based on feedback
- Maintains quality through continuous monitoring

⚡ Advanced Algorithms:
- Gradient Descent optimization
- Genetic Algorithm optimization
- Bayesian Optimization
- Grid Search optimization
- Statistical significance testing
- Pattern clustering and analysis
- Knowledge gap identification

🔄 Scheduled Training:
- Hourly incremental training
- 6-hour pattern analysis
- 12-hour performance optimization
- Daily knowledge synthesis
- Weekly comprehensive retraining

This makes JarvisX truly self-evolving and autonomous! 🧠✨

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,23 @@ services:
     networks:
       - jarvisx-network
 
+  self-training:
+    build: ./services/self-training
+    ports:
+      - "8008:8008"
+    environment:
+      - NODE_ENV=development
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - TRAINING_DATA_PATH=/app/data
+    volumes:
+      - ./services/self-training:/app
+      - ./data:/app/data
+    depends_on:
+      - orchestrator
+      - personality
+    networks:
+      - jarvisx-network
+
 networks:
   jarvisx-network:
     driver: bridge
